api: created endpoint to add a comment to a book's chapter
